// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FavoritePage render correctly FavoritePage with favorite offers 1`] = `
<div
  className="page "
>
  <Header>
    <User
      onLinkEmailClick={[Function]}
    />
  </Header>
  <main
    className="page__main page__main--favorites "
  >
    <div
      className="page__favorites-container container"
    >
      <section
        className="favorites "
      >
        <h1
          className="favorites__title"
        >
          Saved listing
        </h1>
        <ul
          className="favorites__list"
        >
          <FavoriteLocationList
            city=""
            cityFavoriteOffers={
              Array [
                Object {
                  "accommodation": Object {
                    "bedroomsCount": 0,
                    "features": Array [],
                    "guestsLimit": 0,
                    "isPremium": true,
                    "price": 0,
                    "rating": 0,
                    "title": "",
                    "type": "",
                  },
                  "city": "",
                  "cityLocation": Object {
                    "latitude": 0,
                    "longitude": 0,
                    "zoom": 0,
                  },
                  "coordinates": Array [
                    0,
                    0,
                  ],
                  "description": "",
                  "host": Object {
                    "avatar": "",
                    "isPro": true,
                    "name": "",
                  },
                  "id": 1,
                  "images": Array [],
                  "isFavorite": true,
                  "previewImage": "",
                },
                Object {
                  "accommodation": Object {
                    "bedroomsCount": 0,
                    "features": Array [],
                    "guestsLimit": 0,
                    "isPremium": true,
                    "price": 0,
                    "rating": 0,
                    "title": "",
                    "type": "",
                  },
                  "city": "",
                  "cityLocation": Object {
                    "latitude": 0,
                    "longitude": 0,
                    "zoom": 0,
                  },
                  "coordinates": Array [
                    0,
                    0,
                  ],
                  "description": "",
                  "host": Object {
                    "avatar": "",
                    "isPro": true,
                    "name": "",
                  },
                  "id": 2,
                  "images": Array [],
                  "isFavorite": true,
                  "previewImage": "",
                },
              ]
            }
          />
        </ul>
      </section>
    </div>
  </main>
  <footer
    className="footer container"
  >
    <a
      className="footer__logo-link"
      href="/"
      onClick={[Function]}
    >
      <img
        alt="6 cities logo"
        className="footer__logo"
        height="33"
        src="img/logo.svg"
        width="64"
      />
    </a>
  </footer>
</div>
`;

exports[`FavoritePage render correctly FavoritePage without favorite offers 1`] = `
<div
  className="page page--favorites-empty"
>
  <Header>
    <User
      onLinkEmailClick={[Function]}
    />
  </Header>
  <main
    className="page__main page__main--favorites page__main--favorites-empty"
  >
    <div
      className="page__favorites-container container"
    >
      <section
        className="favorites favorites--empty"
      >
        <h1
          className="visually-hidden"
        >
          Favorites (empty)
        </h1>
        <div
          className="favorites__status-wrapper"
        >
          <b
            className="favorites__status"
          >
            Nothing yet saved.
          </b>
          <p
            className="favorites__status-description"
          >
            Save properties to narrow down search or plan yor future trips.
          </p>
        </div>
      </section>
    </div>
  </main>
  <footer
    className="footer container"
  >
    <a
      className="footer__logo-link"
      href="/"
      onClick={[Function]}
    >
      <img
        alt="6 cities logo"
        className="footer__logo"
        height="33"
        src="img/logo.svg"
        width="64"
      />
    </a>
  </footer>
</div>
`;
